fix z-index

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --sidebar-background: 129deg 58% 23%;
+    --sidebar-background: 120deg 100% 20%;
     --sidebar-foreground: 0 100% 100%;
     --sidebar-primary: 20 0% 0%;
     --sidebar-primary-foreground: 70 60% 68%; /* */
